2007-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add StatementHandle#column_info.
	   refine DatabaseHandle#columns.
	* test/test_dbi.rb: add a testcase for StatementHandle#column_info
	   and DatabaseHandle#columns.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: add OCIError#initialize(msg, code = nil).
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: rename char_semantics
	   method to "char_used?". change the return value of data_type
	   method when the data_type is NCHAR, NVARCHAR2 or NCLOB.
	* test/test_all.rb, test/test_metadata.rb: add a testcase for
	   OCI8::Cursor#column_metadata and OCI8#describe_table.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: OCI8::Cursor#fetch_hash accepts a block now.
	* test/test_oci8.rb: add a test for fetch_hash with a block.
	* ext/oci8/metadata.c: fix for 64-bit windows.

2007-11-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/oci8.rb: add OCI8::Cursor#column_metadata.
	* ext/oci8/metadata.c, ext/oci8/oci8.h, ext/oci8/stmt.c: Change
	   the lifetime of OCI8::Metadata::Base. It depended on the connection,
	   but now it depends on what it describes. For example OCI8::cursor
	   for OCI8::Cursor#column_metadata.
	* ext/oci8/env.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	   ext/oci8/oraconf.rb, setup.rb: fix for ruby 1.9. Not full tests are
	   not passed on ruby 1.9.

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/metadata.rb, test/test_datetime.rb:
	   suppress warnings 'instance variable @xxxx not initialized' when
	   running ruby with '-w' option. (suggested by Daniel Berger.)

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_dbi.rb, test/test_oci8.rb:
	   add 'purge' option to 'drop table' statement when Oracle 10g
	   or upper.
	* ext/oci8/bind.c: add OCI8::BindType::BinaryDouble when SQLT_BDOUBLE
	   is defined.